--- a/templates/choose_Func.html
+++ b/templates/choose_Func.html
@@ -74,6 +74,49 @@
             border-radius: 6px;
             outline: none;
         }
+
+        /* Dropdown Button */
+            .dropbtn {
+                background-color: #08d680;
+                color: white;
+                padding:  10px 20px;
+                font-size: 16px;
+                border-radius: 6px;
+                outline: none;
+            }
+
+            /* The container <div> - needed to position the dropdown content */
+            .dropdown {
+            position: relative;
+            display: inline-block;
+            }
+
+            /* Dropdown Content (Hidden by Default) */
+            .dropdown-content {
+            display: none;
+            position: absolute;
+            background-color: #f1f1f1;
+            min-width: 160px;
+            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+            z-index: 1;
+            }
+
+            /* Links inside the dropdown */
+            .dropdown-content a {
+            color: rgb(0, 0, 0);
+            padding: 12px 16px;
+            text-decoration: none;
+            display: block;
+            }
+
+            /* Change color of dropdown links on hover */
+            .dropdown-content a:hover {background-color: #ddd;}
+
+            /* Show the dropdown menu on hover */
+            .dropdown:hover .dropdown-content {display: block;}
+
+            /* Change the background color of the dropdown button when the dropdown content is shown */
+            .dropdown:hover .dropbtn {background-color: #3e8e41;}
 		</style>
 
 
@@ -98,11 +141,19 @@
 				
 
                 <h3>(Functions : min , max , mean, median , p{0,100}= percentile for example: p55)</h3>
-                <div >
+                <div class="dropdown">
                     <a class="button"   href="{{ url_for('stats',img_file_name=img_file_name ,func_name='min')}}">Min</a>
                     <a class="button" href="{{ url_for('stats',img_file_name=img_file_name,func_name='max')}}">Max</a>
                     <a class="button" href="{{ url_for('stats',img_file_name=img_file_name,func_name='mean')}}">Mean</a>
                     <a class="button" href="{{ url_for('stats',img_file_name=img_file_name,func_name='median')}}">Median</a>
+                    <div class="dropdown">
+                        <button class="dropbtn">Percentile</button>
+                        <div class="dropdown-content">
+                            {% for i in prange %}
+                            <a href="{{url_for('stats',img_file_name=img_file_name,func_name=i)}}">{{i}}</a>
+                            {% endfor %}
+                        </div>
+                      </div>
                 </div>
 			</div>
 		</main>
