--- a/templates/choose_Func.html
+++ b/templates/choose_Func.html
@@ -96,9 +96,11 @@
             display: none;
             position: absolute;
             background-color: #f1f1f1;
-            min-width: 160px;
+            min-width: 100px;
             box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
             z-index: 1;
+			max-height:100px;
+   			overflow:scroll; 
             }
 
             /* Links inside the dropdown */
@@ -107,6 +109,7 @@
             padding: 12px 16px;
             text-decoration: none;
             display: block;
+
             }
 
             /* Change color of dropdown links on hover */
